--- a/index.html
+++ b/index.html
@@ -1,79 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>كشف جميع الأحرف + موجات المايك</title>
-  <style>
-    body { background:#111; color:#0f0; text-align:center; font-family:Arial; }
-    canvas { background:#000; display:block; margin:20px auto; border:1px solid #333; }
-    #keyPressed { font-size:30px; margin-top:20px; }
-  </style>
+    <meta charset="UTF-8">
+    <title>رفع الملفات</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f0f0f0; text-align: center; padding-top: 50px; }
+        form { background: #fff; padding: 20px; border-radius: 10px; display: inline-block; }
+        input[type="file"] { margin: 10px 0; }
+        input[type="submit"] { padding: 10px 20px; cursor: pointer; }
+    </style>
 </head>
 <body>
-  <h1>🎤 جميع الأحرف + موجات المايك</h1>
-  <canvas id="oscilloscope" width="600" height="200"></canvas>
-  <div id="keyPressed">اضغط أي زر من الكيبورد...</div>
-
-  <script>
-    const canvas = document.getElementById("oscilloscope");
-    const ctx = canvas.getContext("2d");
-    const keyDiv = document.getElementById("keyPressed");
-
-    // 🔹 عرض أي زر يضغط
-    document.addEventListener("keydown", (event) => {
-      let keyName = event.key;
-      // بعض المفاتيح الخاصة تظهر بشكل طويل، نحولها للغة عربية أو توضيح
-      if (keyName === " ") keyName = "Space";
-      keyDiv.textContent = "الحرف أو الزر المضغوط: " + keyName;
-      console.log("Key pressed:", keyName);
-    });
-
-    // 🔹 رسم موجة صوتية من المايك
-    async function initMic() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-        const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        const source = audioCtx.createMediaStreamSource(stream);
-        const analyser = audioCtx.createAnalyser();
-
-        source.connect(analyser);
-        analyser.fftSize = 2048;
-
-        const bufferLength = analyser.fftSize;
-        const dataArray = new Uint8Array(bufferLength);
-
-        function draw() {
-          requestAnimationFrame(draw);
-          analyser.getByteTimeDomainData(dataArray);
-
-          ctx.fillStyle = "#000";
-          ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-          ctx.lineWidth = 2;
-          ctx.strokeStyle = "#0f0";
-          ctx.beginPath();
-
-          const sliceWidth = canvas.width / bufferLength;
-          let x = 0;
-
-          for (let i = 0; i < bufferLength; i++) {
-            const v = dataArray[i] / 128.0;
-            const y = v * canvas.height/2;
-            if (i === 0) ctx.moveTo(x, y);
-            else ctx.lineTo(x, y);
-            x += sliceWidth;
-          }
-          ctx.lineTo(canvas.width, canvas.height/2);
-          ctx.stroke();
-        }
-
-        draw();
-      } catch (err) {
-        alert("مايك غير متاح أو تم الرفض: " + err.message);
-      }
-    }
-
-    initMic();
-  </script>
+    <h2>رفع ملفات pkg أو مستندات</h2>
+    <form action="upload.php" method="post" enctype="multipart/form-data">
+        <input type="file" name="fileToUpload" required>
+        <br>
+        <input type="submit" value="رفع الملف" name="submit">
+    </form>
 </body>
 </html>
